ecmascript/parser/tests/test262-error-references/fail/f8b20220d8c85d71.js.stderr
error: Invalid unicode code point
 --> $DIR/tests/test262-parser/fail/f8b20220d8c85d71.js:1:5
  |
1 | "\u{110000}"
  |     ^^^^^^

